fix: improve card list navigation mobile styles

--- a/src/components/card-list/card-list.module.css
+++ b/src/components/card-list/card-list.module.css
@@ -23,15 +23,28 @@
 }
 
 .nav-jump {
+  flex: 1 1 auto;
   width: min(12rem, 33.333%);
   margin-right: 1px;
 }
 
+.nav-config {
+  flex: 0 0 auto;
+}
+
 .nav-stats {
   display: inline-flex;
+  flex-flow: row wrap;
   align-items: center;
   gap: 0.25rem;
   font-size: var(--text-sm);
+}
+
+.nav-stats-filter-count {
+  display: none;
+  @media screen and (min-width: 28rem) {
+    display: block;
+  }
 }
 
 .scroller {
